@@ -38,3 +38,6 @@ extern const char *get_product_url(const char *product);
 extern const char *get_default_component(const char *product);
 
 extern void free_product_list(void);
+
+extern int is_product_path(const char *product);
+extern const char *link_product_path(const char *path);
